--- a/models/Medicine Recommendation System.ipynb
+++ b/models/Medicine Recommendation System.ipynb
@@ -25,22 +25,7 @@
    "execution_count": 1,
    "id": "4e4766bf",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\mdaza\\AppData\\Local\\Temp\\ipykernel_18692\\3545200458.py:1: DeprecationWarning: \n",
-      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
-      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
-      "but was not found to be installed on your system.\n",
-      "If this would cause problems for you,\n",
-      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
-      "        \n",
-      "  import  pandas as pd\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import  pandas as pd"
    ]
@@ -52,7 +37,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = pd.read_csv('Training.csv')"
+    "dataset = pd.read_csv(r'C:\\Users\\ayush\\all project\\drug reco\\MRS\\dataset\\Training.csv')"
    ]
   },
   {
@@ -465,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "a49049bd",
    "metadata": {},
    "outputs": [
@@ -475,7 +460,7 @@
        "(4920, 133)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -486,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "id": "126a297f",
    "metadata": {},
    "outputs": [
@@ -496,7 +481,7 @@
        "41"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -507,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "id": "1132da7c",
    "metadata": {},
    "outputs": [
@@ -528,7 +513,7 @@
        "       'Urinary tract infection', 'Psoriasis', 'Impetigo'], dtype=object)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -547,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "b1e9c647",
    "metadata": {},
    "outputs": [],
@@ -557,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "id": "97e5fd53",
    "metadata": {},
    "outputs": [],
@@ -568,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "id": "a28c651a",
    "metadata": {},
    "outputs": [
@@ -955,7 +940,7 @@
        "[4920 rows x 132 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -966,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "id": "a182c77b",
    "metadata": {},
    "outputs": [],
@@ -981,17 +966,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 12,
    "id": "06116379",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([15, 15, 15, ..., 38, 35, 27])"
+       "array([15, 15, 15, ..., 38, 35, 27], shape=(4920,))"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1002,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "id": "4cb2e972",
    "metadata": {},
    "outputs": [],
@@ -1013,7 +998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "id": "3b81158f",
    "metadata": {},
    "outputs": [
@@ -1023,7 +1008,7 @@
        "((3444, 132), (3444,))"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1034,7 +1019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 15,
    "id": "9e455085",
    "metadata": {},
    "outputs": [
@@ -1044,7 +1029,7 @@
        "((1476, 132), (1476,))"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1063,7 +1048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "id": "5b9c4a9e",
    "metadata": {},
    "outputs": [
@@ -1184,7 +1169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "id": "a74ad639",
    "metadata": {},
    "outputs": [
@@ -1194,7 +1179,7 @@
        "1.0"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1209,7 +1194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "id": "fdd98daa",
    "metadata": {},
    "outputs": [],
@@ -1221,7 +1206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "id": "4dd13145",
    "metadata": {},
    "outputs": [],
@@ -1232,7 +1217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "id": "8bf40f9d",
    "metadata": {},
    "outputs": [
@@ -1248,7 +1233,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\mdaza\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\sklearn\\base.py:493: UserWarning: X does not have valid feature names, but SVC was fitted with feature names\n",
+      "c:\\Users\\ayush\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\utils\\validation.py:2739: UserWarning: X does not have valid feature names, but SVC was fitted with feature names\n",
       "  warnings.warn(\n"
      ]
     }
@@ -1261,7 +1246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "id": "786bfd1a",
    "metadata": {},
    "outputs": [
@@ -1277,7 +1262,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\mdaza\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\sklearn\\base.py:493: UserWarning: X does not have valid feature names, but SVC was fitted with feature names\n",
+      "c:\\Users\\ayush\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\utils\\validation.py:2739: UserWarning: X does not have valid feature names, but SVC was fitted with feature names\n",
       "  warnings.warn(\n"
      ]
     }
@@ -1306,22 +1291,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 22,
    "id": "767ed813",
    "metadata": {},
    "outputs": [],
    "source": [
-    "sym_des = pd.read_csv(\"symtoms_df.csv\")\n",
-    "precautions = pd.read_csv(\"precautions_df.csv\")\n",
-    "workout = pd.read_csv(\"workout_df.csv\")\n",
-    "description = pd.read_csv(\"description.csv\")\n",
-    "medications = pd.read_csv('medications.csv')\n",
-    "diets = pd.read_csv(\"diets.csv\")"
+    "sym_des = pd.read_csv(r'C:\\Users\\ayush\\all project\\drug reco\\MRS\\dataset\\symtoms_df.csv')\n",
+    "precautions = pd.read_csv(r'C:\\Users\\ayush\\all project\\drug reco\\MRS\\dataset\\precautions_df.csv')\n",
+    "workout = pd.read_csv(r'C:\\Users\\ayush\\all project\\drug reco\\MRS\\dataset\\workout_df.csv')\n",
+    "description = pd.read_csv(r'C:\\Users\\ayush\\all project\\drug reco\\MRS\\dataset\\description.csv')\n",
+    "medications = pd.read_csv(r'C:\\Users\\ayush\\all project\\drug reco\\MRS\\dataset\\medications.csv')\n",
+    "diets = pd.read_csv(r'C:\\Users\\ayush\\all project\\drug reco\\MRS\\dataset\\diets.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 23,
    "id": "6cb123a9",
    "metadata": {},
    "outputs": [],
@@ -1360,49 +1345,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "a36b1e93",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "=================predicted disease============\n",
-      "Fungal infection\n",
-      "=================description==================\n",
-      "Fungal infection is a common skin condition caused by fungi.\n",
-      "=================precautions==================\n",
-      "1 :  bath twice\n",
-      "2 :  use detol or neem in bathing water\n",
-      "3 :  keep infected area dry\n",
-      "4 :  use clean cloths\n",
-      "=================medications==================\n",
-      "5 :  ['Antifungal Cream', 'Fluconazole', 'Terbinafine', 'Clotrimazole', 'Ketoconazole']\n",
-      "=================workout==================\n",
-      "6 :  Avoid sugary foods\n",
-      "7 :  Consume probiotics\n",
-      "8 :  Increase intake of garlic\n",
-      "9 :  Include yogurt in diet\n",
-      "10 :  Limit processed foods\n",
-      "11 :  Stay hydrated\n",
-      "12 :  Consume green tea\n",
-      "13 :  Eat foods rich in zinc\n",
-      "14 :  Include turmeric in diet\n",
-      "15 :  Eat fruits and vegetables\n",
-      "=================diets==================\n",
-      "16 :  ['Antifungal Diet', 'Probiotics', 'Garlic', 'Coconut oil', 'Turmeric']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\mdaza\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\sklearn\\base.py:493: UserWarning: X does not have valid feature names, but SVC was fitted with feature names\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Test 1\n",
     "# Split the user's input into a list of symptoms (assuming they are comma-separated) # itching,skin_rash,nodal_skin_eruptions\n",
@@ -1445,7 +1391,46 @@
    "execution_count": null,
    "id": "2d7ee79b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=================predicted disease============\n",
+      "Fungal infection\n",
+      "=================description==================\n",
+      "Fungal infection is a common skin condition caused by fungi.\n",
+      "=================precautions==================\n",
+      "1 :  bath twice\n",
+      "2 :  use detol or neem in bathing water\n",
+      "3 :  keep infected area dry\n",
+      "4 :  use clean cloths\n",
+      "=================medications==================\n",
+      "5 :  ['Antifungal Cream', 'Fluconazole', 'Terbinafine', 'Clotrimazole', 'Ketoconazole']\n",
+      "=================workout==================\n",
+      "6 :  Avoid sugary foods\n",
+      "7 :  Consume probiotics\n",
+      "8 :  Increase intake of garlic\n",
+      "9 :  Include yogurt in diet\n",
+      "10 :  Limit processed foods\n",
+      "11 :  Stay hydrated\n",
+      "12 :  Consume green tea\n",
+      "13 :  Eat foods rich in zinc\n",
+      "14 :  Include turmeric in diet\n",
+      "15 :  Eat fruits and vegetables\n",
+      "=================diets==================\n",
+      "16 :  ['Antifungal Diet', 'Probiotics', 'Garlic', 'Coconut oil', 'Turmeric']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\ayush\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\utils\\validation.py:2739: UserWarning: X does not have valid feature names, but SVC was fitted with feature names\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "# Test 1\n",
     "# Split the user's input into a list of symptoms (assuming they are comma-separated) # yellow_crust_ooze,red_sore_around_nose,small_dents_in_nails,inflammatory_nails,blister\n",
@@ -1485,7 +1470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 36,
    "id": "a8d5df35",
    "metadata": {},
    "outputs": [
@@ -1493,7 +1478,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.4.2\n"
+      "1.6.1\n"
      ]
     }
    ],
@@ -1515,7 +1500,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1529,7 +1514,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
