--- a/models/Medicine Recommendation System.ipynb
+++ b/models/Medicine Recommendation System.ipynb
@@ -532,12 +532,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "b1e9c647",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.model_selection import train_test_split"
+    "from sklearn.model_selection import train_test_split\n",
+    "from pathlib import Path\n",
+    "cwd = Path.cwd()"
    ]
   },
   {
@@ -1291,17 +1293,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "767ed813",
    "metadata": {},
    "outputs": [],
    "source": [
-    "sym_des = pd.read_csv(r'C:\\Users\\ayush\\all project\\drug reco\\MRS\\dataset\\symtoms_df.csv')\n",
-    "precautions = pd.read_csv(r'C:\\Users\\ayush\\all project\\drug reco\\MRS\\dataset\\precautions_df.csv')\n",
-    "workout = pd.read_csv(r'C:\\Users\\ayush\\all project\\drug reco\\MRS\\dataset\\workout_df.csv')\n",
-    "description = pd.read_csv(r'C:\\Users\\ayush\\all project\\drug reco\\MRS\\dataset\\description.csv')\n",
-    "medications = pd.read_csv(r'C:\\Users\\ayush\\all project\\drug reco\\MRS\\dataset\\medications.csv')\n",
-    "diets = pd.read_csv(r'C:\\Users\\ayush\\all project\\drug reco\\MRS\\dataset\\diets.csv')"
+    "sym_des = pd.read_csv(f'{cwd}/dataset/symtoms_df.csv')\n",
+    "precautions = pd.read_csv(f'{cwd}/dataset/precautions_df.csv')\n",
+    "workout = pd.read_csv(f'{cwd}/dataset/workout_df.csv')\n",
+    "description = pd.read_csv(f'{cwd}/dataset/description.csv')\n",
+    "medications = pd.read_csv(f'{cwd}/dataset/medications.csv')\n",
+    "diets = pd.read_csv(f'{cwd}/dataset/diets.csv')"
    ]
   },
   {
