--- a/models/Medicine Recommendation System.ipynb
+++ b/models/Medicine Recommendation System.ipynb
@@ -22,22 +22,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "4e4766bf",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import  pandas as pd"
+    "import  pandas as pd\n",
+    "from pathlib import Path\n",
+    "cwd = Path.cwd()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "56ce4778",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = pd.read_csv(r'C:\\Users\\ayush\\all project\\drug reco\\MRS\\dataset\\Training.csv')"
+    "dataset = pd.read_csv(f'{cwd}/dataset/Training.csv')"
    ]
   },
   {
@@ -537,9 +539,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.model_selection import train_test_split\n",
-    "from pathlib import Path\n",
-    "cwd = Path.cwd()"
+    "from sklearn.model_selection import train_test_split"
    ]
   },
   {
